# hckfetch

./: README.md  hckfetch  hckfetch-wrap  hckfetch.service  install.sh  pyproject.toml  uninstall.sh
src/hckfetch/: analyzer.py  cli.py  config.py  daemon.py  levels.py  renderer.py
