[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "hckfetch"
version = "2.0.0"
description = "Gamified pentesting activity tracker"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "pyfiglet>=0.8",   # для генерації банерів
]

[project.scripts]
hckfetch = "hckfetch.cli:main"
hckfetch-daemon = "hckfetch.daemon:main"

[tool.poetry]
packages = [{ include = "hckfetch", from = "src" }]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
ruff = "^0.1"
mypy = "^1.0"
